Add Icons; Convert Ammo and Health from interfaces to class; Minor Restructure Of GameObjects